Fixed logo url issue, swap button not working issue, multiple chats from same person issue and several small fixes

--- a/backend/public/upload_book.html
+++ b/backend/public/upload_book.html
@@ -15,7 +15,7 @@
         <div class="">
             <div class="row" id="top_navbar">
                 <div class="col-2 d-flex justify-content-center align-items-center" id="navbar_img_div">
-                    <a href="#"><img class="mx-1 mx-sm-3 mx-md-4 mx-lg-5" src="LOGO_only.png" alt=""></a>
+                    <a href="index.html"><img class="mx-1 mx-sm-3 mx-md-4 mx-lg-5" src="LOGO_only.png" alt=""></a>
                 </div>
                 <div class="col-8 d-flex justify-content-center align-items-center" id="navbar_img_div">
                     <a href="#"><img class="mx-1 mx-sm-3 mx-md-4 mx-lg-5" src="LOGO_name.png" alt=""></a>
