--- a/backend/public/books_display.html
+++ b/backend/public/books_display.html
@@ -105,11 +105,25 @@
                         <h5 class="mr-5" style="width:85px;">OWNER</h5>
                         <h5 class="text-secondary"></h5>
                     </div>
-                    <a href="#" id="modalSwapBtn" class="swap-link"><button class="swap-btn">SWAP <i class="fa-solid fa-arrow-right arrow-icon"></i></button></a>
+                    <a id="modalSwapBtn" class="swap-link"><button class="swap-btn">SWAP <i class="fa-solid fa-arrow-right arrow-icon"></i></button></a>
                 </div>
             </div>
         </div>
     </section>
+    <!-- BOTTOM NAVBAR -->
+    <div class="container libre-baskerville-font py-1" id="bottomNavBar">
+        <div class="row d-flex align-items-center justify-content-center py-2">
+            <div class="col-6 d-flex align-items-center justify-content-between">
+                <a class="mx-2 my-0" href="browse.html" id="currentPage">&nbsp;<i class="fa-solid fa-magnifying-glass"></i> <span>&nbsp;Browse</span></a>
+                <a class="mx-2 my-0" href="chatpage.html" ><i class="fa-regular fa-message"></i> &nbsp;<span>Chat</span></a>
+                <a class="mx-2 my-0" href="swapRequest.html"><i class="fa-solid fa-arrow-left"></i> &nbsp;<span>Request</span></a>
+            </div>
+            <div class="col-6 d-flex align-items-center justify-content-end">
+                <a class="px-3 py-1" href="upload_book.html" id="uploadBookBtn">&nbsp;<i class="fa-solid fa-circle-plus"></i><span>&nbsp;Upload a Book</span>&nbsp;</a>
+            </div>
+        </div>
+    </div>
+    <br><br><br><br><br><br><br><br><br><br><br>
 </body>
     <script src="books_display.js"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
